Fix label text wrapping

--- a/components/Label/styles.module.scss
+++ b/components/Label/styles.module.scss
@@ -1,12 +1,17 @@
-.label-container {
-	// This prevents spaces from being omitted when wrapping text in labels, which allows space characters at the end of wrapped lines to sometimes line up with the colon.
+.label {
+	&-container {
+		// This prevents breaking immediately before the colon.
+		white-space: nowrap;
+
+		@at-root div#{&} {
+			margin-bottom: 2px;
+		}
+
+		&::after {
+			content: ':';
+		}
+	}
+
+	// This prevents spaces from being omitted when wrapping text in labels, which allows space characters at the end of wrapped lines to sometimes line up with the colon, which looks nicer.
 	white-space: pre-wrap;
-
-	@at-root div#{&} {
-		margin-bottom: 2px;
-	}
-
-	&::after {
-		content: ':';
-	}
 }
